--- a/index.html
+++ b/index.html
@@ -12,54 +12,85 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <!--HEADER-->
-    <!-- <header class="page-header">
-      <div class="container header-nav">
-        <nav class="mail-nav" style="display: flex; align-items: center">
-          <a href="./index.html" class="logo"
+ <header class="page-header">
+      <!-- Site navigation -->
+      <div class="container header__nav">
+        <!-- Header logo -->
+        <a href="./index.html" class="logo"
             >Web<span class="logo__color logo__color--dark">Studio</span></a
           >
-          <div class="header-links js-menu-container">
-          <ul class="site-nav">
-            <li class="item">
-              <a href="./index.html" class="site-nav__link current">Студія</a>
-            </li>
-            <li class="item">
-              <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
-            </li>
-            <li class="item"><a href="#" class="site-nav__link">Контакти</a></li>
-          </ul>
-        </nav>
-        <ul class="contacts">
-          <li class="contacts__item">
-            <a href="mailto:info@devstudio.com" class="contacts__link">
-            <svg class="contacts__icon" width="16" height="12">
-              <use href="./images/contacts.svg#icon-mail">
-              </use>
-            </svg>info@devstudio.com</a>
-          </li>
-          <li class="contacts__item">
-            <a href="tel:+380961111111" class="contacts__link">
-            <svg class="contacts__icon" width="10" height="16">
-              <use href="./images/contacts.svg#icon-smartphone"></use>
-            </svg>+38 096 111 11 11</a>
-          </li>
-        </ul>
+        <div class="header-links js-menu-container">
+          <nav class="site-nav">
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="./del.html" class="site-nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- Header contact info -->
+          <div class="header__contact">
+            <ul class="contact-info">
+              <li class="contact-info__item">
+                <div class="contact-info__icon">
+                  <a href="mailto:info@devstudio.com" class="contact-info__link">
+                    <svg class="contact-info__icon-mail" width="16" height="12">
+                      <use href="./images/symbol-defs.svg#icon-mail"></use>
+                    </svg>
+                    info@devstudio.com</a
+                  >
+                </div>
+              </li>
+              <li class="contact-info__item">
+                <div class="contact-info__icon">
+                  <a href="tel:+380961111111" class="contact-info__link"
+                    ><svg class="contact-info__icon-tel" width="10" height="16">
+                      <use href="./images/symbol-defs.svg#icon-tel"></use>
+                    </svg>
+                    +38 096 111 11 11</a
+                  >
+                </div>
+              </li>
+            </ul>
+
+        <ul class="contact__social">
+              <li class="contact__item"><a class="contact__link" href="#">Instagram</a></li>
+              <li class="contact__item"><a class="contact__link" href="#">Twitter</a></li>
+              <li class="contact__item"><a class="contact__link" href="#">Facebook</a></li>
+              <li class="contact__item"><a class="contact__link" href="#">LinkedIn</a></li>
+            </ul>
       </div>
+      </div>
+
+      <button type="button" class="menu-toggle js-open-menu" aria-expanded="false">
+        <svg class="menu-toggle__icon" width="24" height="20" aria-label="Мобільне меню">
+          <use class="menu-toggle__open" href="./images/icons.svg#icon-menu"></use>
+          <use class="menu-toggle__close" href="./images/icons.svg#icon-close"></use>
+        </svg>
+        </button>
     </div>
-    </header> -->
+    </header>
     <!--Hero-->
     <main>
-      <section class="hero overlay">
+      <section class="overlay">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="button" type="button" data-modal-open>
@@ -69,7 +100,7 @@
       </section>
 
       <!--Features-->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section__title hidden visually-hidden">переваги</h2>
           <ul class="features">
@@ -78,7 +109,7 @@
                 <svg width="70" height="70">
                   <use href="./images/symbol.svg#icon-antenna"></use>
                 </svg>
-                </div>
+              </div>
               <h3 class="features__title">Увага до деталей</h3>
               <p class="features__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -90,7 +121,7 @@
                 <svg width="70" height="70">
                   <use href="./images/symbol.svg#icon-clock"></use>
                 </svg>
-                </div>
+              </div>
               <h3 class="features__title">Пунктуальність</h3>
               <p class="features__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -99,9 +130,9 @@
             </li>
             <li class="features__item">
               <div class="features__icon">
-              <svg widht="70" height="70">
-                <use href="./images/symbol.svg#icon-diagram"></use>
-              </svg>
+                <svg widht="70" height="70">
+                  <use href="./images/symbol.svg#icon-diagram"></use>
+                </svg>
               </div>
               <h3 class="features__title">Планування</h3>
               <p class="features__text">
@@ -110,9 +141,9 @@
             </li>
             <li class="features__item">
               <div class="features__icon">
-              <svg width="70" height="70">
-                <use href="./images/symbol.svg#icon-astronaut"></use>
-              </svg>
+                <svg width="70" height="70">
+                  <use href="./images/symbol.svg#icon-astronaut"></use>
+                </svg>
               </div>
               <h3 class="features__title">Сучасні технології</h3>
               <p class="features__text">
@@ -122,16 +153,19 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--What we do-->
-      <!-- <section class="section section-padding">
+      <section class="section section-padding">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="activity">
             <li class="activity__item">
               <div class="activity__wrap">
               <img
+              srcset="
+              ./images/img.jpg 1x, 
+              /images/img-2x.jpg 2x"
                 src="./images/img.jpg"
                 alt="робота"
                 width="370"
@@ -143,6 +177,9 @@
             <li class="activity__item">
               <div class="activity__wrap">
               <img
+              srcset="
+              ./images/img-1.jpg 1x, 
+              /images/img-1-2x.jpg 2x"
                 src="./images/img-1.jpg"
                 alt="робота"
                 width="370"
@@ -154,6 +191,9 @@
             <li class="activity__item">
               <div class="activity__wrap">
               <img
+              srcset="
+              ./images/img-2.jpg 1x, 
+              /images/img-2-2x.jpg 2x"
                 src="./images/img-2.jpg"
                 alt="робота"
                 width="370"
@@ -165,15 +205,34 @@
           </ul>
         </div>
         </div>
-      </section> -->
+      </section>
 
       <!--Team-->
-      <!-- <section class="section-team">
+      <section class="section-team">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-list__item">
-              <img src="./images/img-3.jpg" alt="команда" width="270" />
+              <picture>
+                <source
+                srcset="
+                ./images/ihor-270px.jpg 1x, 
+                ./images/ihor-270px-2x.jpg 2x" 
+                media="(min-width: 1200px)"/>
+
+                <source
+                srcset="
+                ./images/ihor-354px.jpg 1x, 
+                ./images/ihor-354px-2x.jpg 2x" 
+                media="(min-width: 768px)"/>
+
+                <source
+                srcset="
+                ./images/ihor-450px.jpg 1x, 
+                ./images/ihor-450px-2x.jpg 2x" 
+                media="(min-width: 320px)"/>
+              </picture>
+              <img src="./images/img-3.jpg" alt="команда"  />
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Ігор Дем'яненко</h3>
                 <p class="team-wrap__text" lang="en">Product Designer</p>
@@ -210,11 +269,30 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img src="./images/img-4.jpg" alt="команда" width="270" />
+              <picture>
+                <source
+                srcset="
+                ./images/olga-270px.jpg 1x, 
+                ./images/olga-270px-2x.jpg 2x" 
+                media="(min-width: 1200px)"/>
+
+                <source
+                srcset="
+                ./images/olga-354px.jpg 1x, 
+                ./images/olga-354px-2x.jpg 2x" 
+                media="(min-width: 768px)"/>
+
+                <source
+                srcset="
+                ./images/olga-450px.jpg 1x, 
+                ./images/olga-450px-2x.jpg 2x" 
+                media="(min-width: 320px)"/>
+              </picture>
+              <img src="./images/img-4.jpg" alt="команда"/>
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Ольга Рєпіна</h3>
                 <p class="team-wrap__text" lang="en">Frontend Developer</p>
-                                <ul class="social-list">
+                  <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__link social-list__link--light" href="">
                     <svg class="social-list__icon" width="20" height="20">
@@ -246,11 +324,30 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img src="./images/img-5.jpg" alt="команда" width="270" />
+              <picture>
+                <source
+                srcset="
+                ./images/mykola-270px.jpg 1x, 
+                ./images/mykola-270px-2x.jpg 2x" 
+                media="(min-width: 1200px)"/>
+
+                <source
+                srcset="
+                ./images/mykola-354px.jpg 1x, 
+                ./images/mykola-354px-2x.jpg 2x" 
+                media="(min-width: 768px)"/>
+
+                <source
+                srcset="
+                ./images/mykola-450px.jpg 1x, 
+                ./images/mykola-450px-2x.jpg 2x" 
+                media="(min-width: 320px)"/>
+              </picture>
+              <img src="./images/img-5.jpg" alt="команда"/>
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Микола Тарасов</h3>
                 <p class="team-wrap__text" lang="en">Marketing</p>
-                                <ul class="social-list">
+                  <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__link social-list__link--light" href="">
                     <svg class="social-list__icon" width="20" height="20">
@@ -282,11 +379,30 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img src="./images/img-6.jpg" alt="команда" width="270" />
+              <picture>
+                <source
+                srcset="
+                ./images/mykhailo-270px.jpg 1x, 
+                ./images/mykhailo-270px-2x.jpg 2x" 
+                media="(min-width: 1200px)"/>
+
+                <source
+                srcset="
+                ./images/mykhailo-354px.jpg 1x, 
+                ./images/mykhailo-354px-2x.jpg 2x" 
+                media="(min-width: 768px)"/>
+
+                <source
+                srcset="
+                ./images/mykhailo-450px.jpg 1x, 
+                ./images/mykhailo-450px-2x.jpg 2x" 
+                media="(min-width: 320px)"/>
+              </picture>
+              <img src="./images/img-6.jpg" alt="команда" />
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Михайло Єрмаков</h3>
                 <p class="team-wrap__text" lang="en">UI Designer</p>
-                                <ul class="social-list">
+                  <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__link social-list__link--light" href="">
                     <svg class="social-list__icon" width="20" height="20">
@@ -319,11 +435,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--Clients-->
-    <!-- <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="section__title">Постійні клієнти</h2>
         <ul class="client-list">
@@ -371,11 +487,12 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!--Footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-wrap">
+        <div class="footer-tablet">
         <div class="wrap">
           <a class="logo" href="./index.html"
             >Web<span class="logo__color logo__color--light">Studio</span></a
@@ -402,7 +519,7 @@
             </ul>
           </address>
         </div>
-
+<!--Footer social-->
         <div class="footer-social">
           <p class="footer-social__title">Приєднуйтесь</p>
           <ul class="social-list">
@@ -455,10 +572,11 @@
               </a>
             </li>
           </ul>
+        </div> 
         </div>
 
-        
-      <div class="mailing">
+        <!--Footer mail-->
+       <div class="mailing">
         <p class="mailing__text">Підпишіться на розсилку</p>
         <form class="mailing__form">
           <label class="mailing__lable">
@@ -471,10 +589,10 @@
         </form>
       </div>
       </div>
-    </footer> -->
+    </footer> 
 
     <!--Modal-->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
@@ -537,7 +655,7 @@
         </form>
 
       </div>
-    </div> -->
+    </div> 
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
