--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,9 @@
               <a href="./index.html" class="site-nav__link">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="site-nav__link current">Портфоліо</a>
+              <a href="./portfolio.html" class="site-nav__link current"
+                >Портфоліо</a
+              >
             </li>
             <li class="item">
               <a href="#" class="site-nav__link">Контакти</a>
@@ -45,14 +47,12 @@
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
-                <use href="./images/contacts.svg#icon-mail"></use></svg>info@devstudio.com</a
-            >
+                <use href="./images/contacts.svg#icon-mail"></use></svg >
           </li>
           <li class="contacts__item">
             <a href="tel:+380961111111" class="contacts__link">
               <svg class="contacts__icon" width="10" height="16">
-                <use href="./images/contacts.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
-            >
+                <use href="./images/contacts.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -106,14 +106,10 @@
                 </div>
               </a>
             </li>
-           <li class="portfolio__item">
+            <li class="portfolio__item">
               <a class="portfolio__link" href="">
                 <div class="text-top-wrap">
-                  <img
-                    src="./images/img-8.jpg"
-                    alt="розробка"
-                    width="370"
-                  />
+                  <img src="./images/img-8.jpg" alt="розробка" width="370" />
                   <p class="description-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -144,7 +140,7 @@
                   </p>
                 </div>
                 <div class="portfolio__wrap">
-                <h2 class="portfolio__title">Ресторан Seafood</h2>
+                  <h2 class="portfolio__title">Ресторан Seafood</h2>
                   <p class="portfolio__text">Додаток</p>
                 </div>
               </a>
@@ -170,7 +166,11 @@
             <li class="portfolio__item">
               <a class="portfolio__link" href="">
                 <div class="text-top-wrap">
-                  <img src="./images/img-11.jpg" alt="Дві коробки" width="370" />
+                  <img
+                    src="./images/img-11.jpg"
+                    alt="Дві коробки"
+                    width="370"
+                  />
                   <p class="description-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -248,7 +248,7 @@
             </li>
 
             <li class="portfolio__item">
-              <a class="portfolio++link" href="">
+              <a class="portfolio__link" href="">
                 <div class="text-top-wrap">
                   <img
                     src="./images/img-15.jpg"
@@ -272,91 +272,94 @@
       </section>
     </main>
     <!--Footer-->
+    <!--Footer-->
     <footer class="footer">
       <div class="container footer-wrap">
-        <div class="wrap">
-          <a class="logo" href="./index.html"
-            >Web<span class="logo__color logo__color--light">Studio</span></a
-          >
-          <address>
-            <ul class="footer-contacts">
-              <li class="footer-contacts__item">
+        <div class="footer-tablet">
+          <div class="wrap">
+            <a class="logo" href="./index.html"
+              >Web<span class="logo__color logo__color--light">Studio</span></a
+            >
+            <address>
+              <ul class="footer-contacts">
+                <li class="footer-contacts__item">
+                  <a
+                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    class="address"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="footer-contacts__item">
+                  <a href="tel:+380961111111" class="footer-contacts__link"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+                <li class="footer-contacts__item">
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="footer-contacts__link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <!--Footer social-->
+          <div class="footer-social">
+            <p class="footer-social__title">Приєднуйтесь</p>
+            <ul class="social-list">
+              <li class="social-list__item">
                 <a
-                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  class="social-list__link"
+                  href="#"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="address"
-                  >м. Київ, пр-т Лесі Українки, 26</a
                 >
+                  <svg class="social-list__icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer-contacts__item">
-                <a href="tel:+380961111111" class="footer-contacts__link"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-              <li class="footer-contacts__item">
+              <li class="social-list__item">
                 <a
-                  href="mailto:info@devstudio.com"
-                  class="footer-contacts__link"
-                  >info@devstudio.com</a
+                  class="social-list__link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
                 >
+                  <svg class="social-list__icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a
+                  class="social-list__link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="social-list__icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a
+                  class="social-list__link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="social-list__icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <!-- FOOTER SOCIAL -->
-        <div class="footer-social">
-          <p class="footer-social__title">Приєднуйтесь</p>
-          <ul class="social-list">
-            <li class="social-list__item">
-              <a
-                class="social-list__link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="social-list__icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a
-                class="social-list__link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="social-list__icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a
-                class="social-list__link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="social-list__icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a
-                class="social-list__link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="social-list__icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
 
         <!--Footer mail-->
@@ -376,6 +379,7 @@
               <svg class="mailing__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
+            </button>
           </form>
         </div>
       </div>
