--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="contact-info__icon">
                   <a href="mailto:info@devstudio.com" class="contact-info__link">
                     <svg class="contact-info__icon-mail" width="16" height="12">
-                      <use href="./images/symbol-defs.svg#icon-mail"></use>
+                      <use href="./images/contacts.svg#icon-mail"></use>
                     </svg>
                     info@devstudio.com</a
                   >
@@ -63,7 +63,7 @@
                 <div class="contact-info__icon">
                   <a href="tel:+380961111111" class="contact-info__link"
                     ><svg class="contact-info__icon-tel" width="10" height="16">
-                      <use href="./images/symbol-defs.svg#icon-tel"></use>
+                      <use href="./images/contacts.svg#icon-smartphone"></use>
                     </svg>
                     +38 096 111 11 11</a
                   >
