--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
               </li>
               <li class="site-nav__item">
-                <a href="./del.html" class="site-nav__link">Контакти</a>
+                <a href="#" class="site-nav__link">Контакти</a>
               </li>
             </ul>
           </nav>
