--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <li class="contact__item"><a class="contact__link" href="#">Instagram</a></li>
               <li class="contact__item"><a class="contact__link" href="#">Twitter</a></li>
               <li class="contact__item"><a class="contact__link" href="#">Facebook</a></li>
-              <li class="contact__item"><a class="contact__link" href="#">LinkedIn</a></li>
+              <li class="contact__item"><a class="contact__link" href="#">Linkedin</a></li>
             </ul>
       </div>
       </div>
@@ -165,7 +165,7 @@
               <img
               srcset="
               ./images/img.jpg 1x, 
-              /images/img-2x.jpg 2x"
+              ./images/img-2x.jpg 2x"
                 src="./images/img.jpg"
                 alt="робота"
                 width="370"
@@ -179,7 +179,7 @@
               <img
               srcset="
               ./images/img-1.jpg 1x, 
-              /images/img-1-2x.jpg 2x"
+              ./images/img-1-2x.jpg 2x"
                 src="./images/img-1.jpg"
                 alt="робота"
                 width="370"
@@ -193,7 +193,7 @@
               <img
               srcset="
               ./images/img-2.jpg 1x, 
-              /images/img-2-2x.jpg 2x"
+              ./images/img-2-2x.jpg 2x"
                 src="./images/img-2.jpg"
                 alt="робота"
                 width="370"
@@ -224,15 +224,15 @@
                 srcset="
                 ./images/ihor-354px.jpg 1x, 
                 ./images/ihor-354px-2x.jpg 2x" 
-                media="(min-width: 768px)"/>
+                media="(min-width: 767px)"/>
 
                 <source
                 srcset="
                 ./images/ihor-450px.jpg 1x, 
                 ./images/ihor-450px-2x.jpg 2x" 
                 media="(min-width: 320px)"/>
-              </picture>
               <img src="./images/img-3.jpg" alt="команда"  />
+              </picture>
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Ігор Дем'яненко</h3>
                 <p class="team-wrap__text" lang="en">Product Designer</p>
@@ -280,15 +280,15 @@
                 srcset="
                 ./images/olga-354px.jpg 1x, 
                 ./images/olga-354px-2x.jpg 2x" 
-                media="(min-width: 768px)"/>
+                media="(min-width: 767px)"/>
 
                 <source
                 srcset="
                 ./images/olga-450px.jpg 1x, 
                 ./images/olga-450px-2x.jpg 2x" 
                 media="(min-width: 320px)"/>
-              </picture>
               <img src="./images/img-4.jpg" alt="команда"/>
+              </picture>
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Ольга Рєпіна</h3>
                 <p class="team-wrap__text" lang="en">Frontend Developer</p>
@@ -335,15 +335,15 @@
                 srcset="
                 ./images/mykola-354px.jpg 1x, 
                 ./images/mykola-354px-2x.jpg 2x" 
-                media="(min-width: 768px)"/>
+                media="(min-width: 767px)"/>
 
                 <source
                 srcset="
                 ./images/mykola-450px.jpg 1x, 
                 ./images/mykola-450px-2x.jpg 2x" 
                 media="(min-width: 320px)"/>
-              </picture>
               <img src="./images/img-5.jpg" alt="команда"/>
+              </picture>
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Микола Тарасов</h3>
                 <p class="team-wrap__text" lang="en">Marketing</p>
@@ -390,15 +390,15 @@
                 srcset="
                 ./images/mykhailo-354px.jpg 1x, 
                 ./images/mykhailo-354px-2x.jpg 2x" 
-                media="(min-width: 768px)"/>
+                media="(min-width: 767px)"/>
 
                 <source
                 srcset="
                 ./images/mykhailo-450px.jpg 1x, 
                 ./images/mykhailo-450px-2x.jpg 2x" 
                 media="(min-width: 320px)"/>
-              </picture>
               <img src="./images/img-6.jpg" alt="команда" />
+              </picture>
               <div class="team-wrap">
                 <h3 class="team-wrap__title">Михайло Єрмаков</h3>
                 <p class="team-wrap__text" lang="en">UI Designer</p>
@@ -494,7 +494,7 @@
       <div class="container footer-wrap">
         <div class="footer-tablet">
         <div class="wrap">
-          <a class="logo" href="./index.html"
+          <a class="footer-logo" href="./index.html"
             >Web<span class="logo__color logo__color--light">Studio</span></a
           >
           <address>
@@ -525,7 +525,7 @@
           <ul class="social-list">
             <li class="social-list__item">
               <a
-                class="social-list__link"
+                class="footer-social__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
@@ -537,7 +537,7 @@
             </li>
             <li class="social-list__item">
               <a
-                class="social-list__link"
+                class="footer-social__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
@@ -549,7 +549,7 @@
             </li>
             <li class="social-list__item">
               <a
-                class="social-list__link"
+                class="footer-social__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
@@ -561,7 +561,7 @@
             </li>
             <li class="social-list__item">
               <a
-                class="social-list__link"
+                class="footer-social__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
