--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <ul class="contact-info">
               <li class="contact-info__item">
                 <div class="contact-info__icon">
-                  <a href="mailto:info@devstudio.com" class="contact-info__link">
+                  <a href="mailto:info@devstudio.com" class="contact-info__link-mail">
                     <svg class="contact-info__icon-mail" width="16" height="12">
                       <use href="./images/contacts.svg#icon-mail"></use>
                     </svg>
@@ -81,7 +81,7 @@
       </div>
 
       <button type="button" class="menu-toggle js-open-menu" aria-expanded="false">
-        <svg class="menu-toggle__icon" width="24" height="20" aria-label="Мобільне меню">
+        <svg class="menu-toggle__icon" width="30"  aria-label="Мобільне меню">
           <use class="menu-toggle__open" href="./images/icons.svg#icon-menu"></use>
           <use class="menu-toggle__close" href="./images/icons.svg#icon-close"></use>
         </svg>
