--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 <div class="contact-info__icon">
                   <a
                     href="mailto:info@devstudio.com"
-                    class="contact-info__link"
+                    class="contact-info__link-mail"
                   >
                     <svg class="contact-info__icon-mail" width="16" height="12">
                       <use href="./images/contacts.svg#icon-mail"></use>
@@ -98,12 +98,7 @@
           class="menu-toggle js-open-menu"
           aria-expanded="false"
         >
-          <svg
-            class="menu-toggle__icon"
-            width="24"
-            height="20"
-            aria-label="Мобільне меню"
-          >
+          <svg class="menu-toggle__icon" width="30" aria-label="Мобільне меню">
             <use
               class="menu-toggle__open"
               href="./images/icons.svg#icon-menu"
